--- a/templates/pay.html
+++ b/templates/pay.html
@@ -1,11 +1,11 @@
-{% extends'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block title %}payments{% endblock title %}
 
 {% block content %}
 <h2>Make a Payment</h2>
 
-<form method="post" action="{% url 'stk' %}">
+<form method="post" action="{% url 'myapp:stk' %}">
 
   {% csrf_token %}
 
